--- a/blogpagestyle.css
+++ b/blogpagestyle.css
@@ -377,7 +377,9 @@ a {
   background-color: rgb(4, 125, 18);
   box-shadow: 0 0 1.5px 2px rgb(14, 14, 14,0.8);
  }
-
+nav{
+  margin-right: 20px;
+}
  .logo
  {
     font-size: 2.5rem;
