--- a/buy-product.css
+++ b/buy-product.css
@@ -1,3 +1,9 @@
+body{
+    background-image: url("./images/sow.jpeg");
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
 .box{
     margin: 100px;
    display: flex;
@@ -58,3 +64,46 @@ select{
 .description{
     float: left;
 }
+
+.container{
+    margin: 150px;
+    display: flex;
+    flex-direction: row;
+     flex-wrap: wrap;
+     justify-content: center;
+     align-items: center;
+     gap: 20px;
+     max-width: 1400px;
+     color: black;
+     background-color: white;
+     padding: 10px;
+     border-radius: 10px;
+     text-align: center;
+   
+}
+
+.img1:hover{
+    cursor: pointer;
+     
+    padding: 20px;
+    position: relative;
+    border-radius: 6px;
+    border: 4px dashed transparent;
+    transition: padding .3s;
+    box-shadow: 5px 10px 10px 1px yellowgreen;
+}
+
+.img1{
+    width: 200px;
+    height: 200px;
+}
+
+
+.heading{
+    color: black;
+    position: relative;
+    top:90px;
+}
+
+
+
