--- a/login.css
+++ b/login.css
@@ -8,12 +8,15 @@
 }
 
 body {
-  display: flex;
+  display: block;
   align-items: center;
   justify-content: center;
-  min-height: 100vh;
+  min-height: 120vh;
   width: 100%;
-  padding: 0 10px;
+  height: 100%;
+  padding: 0 0px;
+  /* background: url("signin-registration images/bgpic.jpg"); */
+  background: url(images/logninpage.jpg);
 }
 
 body::before {
@@ -21,24 +24,26 @@ body::before {
   position: absolute;
   width: 100%;
   height: 100%;
-  background: url("signin-registration images/bgpic.jpg");
+  /* background: url("signin-registration images/bgpic.jpg"); */
   background-position: center;
   background-size: cover;
 }
 
 .wrapper {
+  margin-left: 450px;
+  margin-top: 130px;
   width: 400px;
   border-radius: 8px;
   padding: 30px;
   text-align: center;
-  border: 1px solid rgba(255, 255, 255, 0.5);
+  border: 1px solid rgb(255, 255, 255);
   backdrop-filter: blur(8px);
   -webkit-backdrop-filter: blur(8px);
 }
 
 form {
   display: flex;
-  flex-direction: column;
+  flex-direction:column;
 }
 
 h2 {
@@ -49,7 +54,7 @@ h2 {
 
 .input-field {
   position: relative;
-  border-bottom: 2px solid #ccc;
+  border-bottom: 2px solid #fff;
   margin: 15px 0;
 }
 
@@ -103,7 +108,7 @@ h2 {
 }
 
 .wrapper a {
-  color: #efefef;
+  color: #fff;
   text-decoration: none;
 }
 
@@ -136,3 +141,6 @@ button:hover {
   color: #fff;
 }
 
+.footer{
+  margin-top: 220px;;
+}
