--- a/login.css
+++ b/login.css
@@ -15,8 +15,8 @@ body {
   width: 100%;
   height: 100%;
   padding: 0 0px;
-  /* background: url("signin-registration images/bgpic.jpg"); */
-  background: url(images/logninpage.jpg);
+  background: url("images/bgpic_new.jpg");
+/*   background: url(images/logninpage.jpg); */
 }
 
 body::before {
