--- a/login.css
+++ b/login.css
@@ -8,15 +8,12 @@
 }
 
 body {
-  display: block;
+  display: flex;
   align-items: center;
   justify-content: center;
-  min-height: 120vh;
+  min-height: 100vh;
   width: 100%;
-  height: 100%;
-  padding: 0 0px;
-  background: url("images/bgpic_new.jpg");
-/*   background: url(images/logninpage.jpg); */
+  padding: 0 10px;
 }
 
 body::before {
@@ -24,26 +21,24 @@ body::before {
   position: absolute;
   width: 100%;
   height: 100%;
-  /* background: url("signin-registration images/bgpic.jpg"); */
+  background: url("signin-registration images/bgpic.jpg");
   background-position: center;
   background-size: cover;
 }
 
 .wrapper {
-  margin-left: 450px;
-  margin-top: 130px;
   width: 400px;
   border-radius: 8px;
   padding: 30px;
   text-align: center;
-  border: 1px solid rgb(255, 255, 255);
+  border: 1px solid rgba(255, 255, 255, 0.5);
   backdrop-filter: blur(8px);
   -webkit-backdrop-filter: blur(8px);
 }
 
 form {
   display: flex;
-  flex-direction:column;
+  flex-direction: column;
 }
 
 h2 {
@@ -54,7 +49,7 @@ h2 {
 
 .input-field {
   position: relative;
-  border-bottom: 2px solid #fff;
+  border-bottom: 2px solid #ccc;
   margin: 15px 0;
 }
 
@@ -108,7 +103,7 @@ h2 {
 }
 
 .wrapper a {
-  color: #fff;
+  color: #efefef;
   text-decoration: none;
 }
 
@@ -141,6 +136,3 @@ button:hover {
   color: #fff;
 }
 
-.footer{
-  margin-top: 220px;;
-}
