--- a/blogpagestyle.css
+++ b/blogpagestyle.css
@@ -28,29 +28,14 @@ body {
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
-  margin-top: 60px;
+
   color: var(--txt-color);
 }
-::-webkit-scrollbar {
-  width: 10px; 
+body::-webkit-scrollbar {
+  display: none;
 }
-
-/* Track */
-::-webkit-scrollbar-track {
-  background: #0e4b16; 
-   
-}
-
-/* Handle */
-::-webkit-scrollbar-thumb {
-  background: darkgray;    
-  border-radius: 10px;   
-  
-}
-
-::-webkit-scrollbar-thumb:hover {
-  background: darkgrey;
-  
+body {
+  scrollbar-width: none;
 }
 section {
   min-height: 100vh;
@@ -63,7 +48,7 @@ section {
 }
 
 .heading {
-  padding: 15px;
+  padding: 20px;
   text-align: center;
   font-size: 3rem;
   background-color: aliceblue;
@@ -73,10 +58,10 @@ section {
   box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2);
   text-align: left;
   opacity: 0.8;
-  position:relative;
-  top: 60px;
+  position: fixed;
+  top: 0;
   left: 0;
-  /* z-index: 100; */
+  z-index: 100;
   text-align: center;
   display: flex;
   justify-content: space-between;
@@ -90,50 +75,10 @@ section {
   flex-grow: 1;
   text-align: center;
   font-size: 25px;
-  margin-top: 150px;
-}
-
-.navtitle h2{
-  color: #053314;
-  font-size: 50px;
-}
-
-.login-btn{
-  display:inline-block;
-  padding: 1rem 2rem;
-  background: var(--main-color);
-  border-radius: 4rem;
-  box-shadow: 0 0 1rem var(--main-color);
-  font-size: 1.6rem;
-  color: var(--second-color);
-  letter-spacing: 0.1rem;
-  font-weight: 600;
-  transition: 0.5s ease;
-  position: fixed;
-  margin-top: -5px;
-  margin-left:auto;
-  margin-right: 10px;
-}
-.login-btn:hover {
-  box-shadow: none;
-}
-
-.header span{
-  color: var(--main-color);
-}
-.header .arrow{
-  float:left;
-  left:0;
-  /* margin: 0 70px; */
-  margin-right: 90px;
-}
-.header span :hover{
-    color: #087000 !important;
-    scale: 1.2;
 }
 
 span {
-  color: #0c891f;
+  color: var(--main-color);
 }
 .addblog {
   color: azure;
@@ -297,75 +242,26 @@ a {
 
 /* search bar*/
 .search {
-
   display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: row;
-  gap: 8px; 
-}
-
-.search {
-  display: flex;
-
   /* text-align: center; */
   justify-content: center;
   align-items: center;
   position: relative;
   margin: 20px 0;
   /* flex-direction: row; */
-
-  justify-content: center;
-  align-items: center;
-  flex-direction: row;
-  gap: 8px;
-
 }
-
 #search-icon {
-
   width: 45px;
   margin-left: 10px;
   border-radius: 6px;
   transition: transform 0.3s ease;
   
-
-  width: 35px;
-  height: 35px;
-  border-radius: 50%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: white;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-  overflow: hidden; 
-  transition: background-color 0.3s, transform 0.1s, border-color 0.3s;
-
 }
-
-#search-icon img {
-  width: 100%;
-  height: 100%;
-  border-radius: 50%;
-  object-fit: cover;
-}
-
 #search-icon:hover {
   cursor: pointer;
-
   transform: scale(1.1);
-
-  background-color: white;
-  border: 2px solid blue;
-
 }
-
-#search-icon:active {
-  transform: scale(0.9); 
-}
-
 .search-bar {
-
   margin: 10px;
   padding: 10px;
   width: 50%;
@@ -379,86 +275,7 @@ a {
   outline: none;
   border-color: #c0df64;
   box-shadow: 0 0 10px rgba(192, 223, 100, 0.5);
-
-  margin: 0;
-  padding: 10px 15px;
-  width: 40%;
-  height: 40px;
-  border-radius: 20px;
-  border: 1px solid gray;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-  transition: border-color 0.3s, box-shadow 0.3s;
-}
-
-.search-bar:focus {
-  border-color: blue;
-  box-shadow: 0 2px 5px rgba(0, 123, 255, 0.5);
-  outline: none;
-
 }
 .hide {
   display: none;
-}
-/* navbar */
-.header
- {
-  position: fixed;
-  opacity: 0.8;
-   top: 0;
-   left: 0;
-   width:100%;
-   padding:2rem 9%;
-   background-color: var(--bg-color);
-   display: flex;
-   justify-content: space-between;
-   align-items: center;
-   z-index: 10000;
-   transition: all 0.8s;
- }
- .header.sticky
- {
-  opacity: 0.9;
-  padding: 2rem 5%;
-  background-color: rgb(4, 125, 18);
-  box-shadow: 0 0 1.5px 2px rgb(14, 14, 14,0.8);
- }
-nav{
-  margin-right: 30px;
-}
- .logo
- {
-    font-size: 2.5rem;
-    color: var(--txt-color);
-    font-weight: 600;
-    cursor: default;
- }
- .navbar a {
-  /* position: relative; */
-  font-size: 2rem;
-  /* left: 118px; */
-  color: var(--txt-color);
-  margin-left: 4rem;
-  transition: 0.3s;
-}
-.navbar a:hover {
-  color: var(--main-color);
-}
-.navbar a:not(.active):hover {
-  color: var(--main-color);
-}
-
-
-.navbar a.active,
-.navbar a.active:hover {
-  color: var(--main-color);
-}
-  .navbar.active {
-  display: block;
-}
-.logoImg {
-  width: 80px;
-  height: auto; /* Use auto to maintain aspect ratio */
-  max-width: 100%;
-
-  margin-right: 5px; /* Adjust margin as needed */
 }
