--- a/style.css
+++ b/style.css
@@ -1595,6 +1595,8 @@ font-size: 36px;
   position: fixed;
   margin-top: -5px;
   margin-left:auto;
+  cursor: pointer;
+  transition: 5s;
 }
 .login-btn:hover {
   box-shadow: none;
